--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = ["pandas>=3.0.1", "requests>=2.32.5"]
+dependencies = [
+    "pandas>=3.0.1",
+    "pycountry>=26.2.16",
+    "requests>=2.32.5",
+    "tabulate>=0.9.0",
+]
 
 [tool.ruff]
 line-length = 88
