--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
+    "geojson>=3.2.0",
     "pandas>=3.0.1",
     "pycountry>=26.2.16",
     "requests>=2.32.5",
