add choropleth map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
   // Tell VS Code to look for the virtual environment created by 'uv'
   "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
   "cSpell.words": [
+    "Choropleth",
     "Scatterplot"
   ]
 }
